--- a/app/assets/stylesheets/search_bar.css.scss
+++ b/app/assets/stylesheets/search_bar.css.scss
@@ -1,4 +1,5 @@
 .home-search {
+	overflow-x: scroll;
 	position: absolute;
 	bottom: 0px;
 	background: rgba(0, 0, 0, 0.6);
